tests/baselines/reference/functionReturn.errors.txt
tests/cases/compiler/functionReturn.ts(9,5): error TS7027: Unreachable code detected.
tests/cases/compiler/functionReturn.ts(13,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/functionReturn.ts (2 errors) ====
    function f0(): void { }
    function f1() {
        var n: any = f0();
    }
    function f2(): any { }
    function f3(): string { return; }
    function f4(): string {
        return '';
        return;
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    function f5(): string {
        return '';
        return undefined;
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }